// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pre process css > generateCSSCode: get css code 1`] = `
"@import \\"./test\\";
.test {
    color: v-bind(appTheme2);
}"
`;

exports[`pre process css > generateCSSCode: get scss code 1`] = `
"@import \\"./test\\";
#app div {
  color: v-bind(fooColor);
}"
`;

exports[`pre process css > getCSSVarsCode: generate code 1`] = `
{
  "vBindCode": {
    "color": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
div{color:v-bind(color)}
/* <inject end> */
",
    },
  },
  "vBindEntry": false,
  "vBindPathNode": {
    "block": {
      "children": [
        {
          "important": false,
          "loc": null,
          "property": "color",
          "type": "Declaration",
          "value": {
            "children": [
              {
                "children": [
                  {
                    "loc": null,
                    "name": "color",
                    "type": "Identifier",
                  },
                ],
                "loc": null,
                "name": "v-bind",
                "type": "Function",
              },
            ],
            "loc": null,
            "type": "Value",
          },
        },
      ],
      "loc": null,
      "type": "Block",
    },
    "loc": null,
    "prelude": {
      "children": [
        {
          "children": [
            {
              "loc": null,
              "name": "div",
              "type": "TypeSelector",
            },
          ],
          "loc": null,
          "type": "Selector",
        },
      ],
      "loc": null,
      "type": "SelectorList",
    },
    "type": "Rule",
  },
}
`;

exports[`pre process css > getCurSassFileContent: basic 1`] = `
" 
 
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > getCurSassFileContent: no ;  1`] = `
" 
 #app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > getCurSassFileContent: no start and end  1`] = `
"@import \\"./test\\"
@use './test-use'
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > preProcessCSS: basic 1`] = `
{
  "color": Set {
    "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
p{color:v-bind(color)}
/* <inject end> */
",
  },
}
`;

exports[`pre process css > preProcessCSS: basic 2`] = `
{
  "appTheme2": Set {
    "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.test{color:v-bind(appTheme2)}
/* <inject end> */
",
  },
}
`;

exports[`pre process css > preProcessCSS: map path scss -> css or scss 1`] = `
Map {
  "D:/project-github/unplugin-vue-cssvars/core/css/__test__/foo.scss" => {
    "importer": Set {
      "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test.scss",
    },
    "vBindCode": {
      "fooColor": Set {
        "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
#app div{color:v-bind(fooColor)}
/* <inject end> */
",
      },
    },
  },
  "D:/project-github/unplugin-vue-cssvars/core/css/__test__/foo2.scss" => {
    "importer": Set {
      "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test2.css",
    },
    "vBindCode": {
      "fooColor": Set {
        "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
#app div{color:v-bind(fooColor)}
/* <inject end> */
",
      },
    },
  },
  "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test.css" => {
    "importer": Set {
      "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test2.css",
    },
    "vBindCode": {
      "color": Set {
        "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
p{color:v-bind(color)}
/* <inject end> */
",
      },
    },
  },
  "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test.scss" => {
    "importer": Set {
      "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test2.css",
    },
    "vBindCode": {
      "color": Set {
        "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.scss{color:v-bind(color)}
/* <inject end> */
",
      },
    },
  },
  "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test2.css" => {
    "importer": Set {
      "D:/project-github/unplugin-vue-cssvars/core/css/__test__/test.css",
    },
    "vBindCode": {
      "appTheme2": Set {
        "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.test{color:v-bind(appTheme2)}
/* <inject end> */
",
      },
    },
  },
}
`;

exports[`pre process css > setImportToSassCompileRes: @import 1`] = `
"@import \\"./test\\";
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > setImportToSassCompileRes: @use 1`] = `
"@import \\"./test\\";
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > setImportToSassCompileRes: basic 1`] = `
"@import './test-use';
@import \\"./test\\";
#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > setImportToSassCompileRes: no @use and @import 1`] = `
"#app {
  div {
    color: v-bind(fooColor);
  }
  .foo {
    color: red
  }
}"
`;

exports[`pre process css > walkCSSTree: basic 1`] = `
{
  "importer": "./test",
  "vBindCode": {
    "bar": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.bar{color:v-bind(bar);font-size:22px}
/* <inject end> */
",
    },
    "color": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.foo{color:v-bind(color);font-size:20px}
/* <inject end> */
",
    },
  },
}
`;

exports[`pre process css > walkCSSTree: helper i is false 1`] = `
{
  "importer": "",
  "vBindCode": {
    "bar": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.bar{color:v-bind(bar);font-size:22px}
/* <inject end> */
",
    },
    "color": Set {
      "
/* created by @unplugin-vue-cssvars */
/* <inject start> */
.foo{color:v-bind(color);font-size:20px}
/* <inject end> */
",
    },
  },
}
`;
